<resources>
    <string name="app_name">Pixel Party</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="maintext">Text in English</string>
    <string name="retour">Return</string>
    <string name="labyrinth">Labyrinth</string>
    <string name="run">Run</string>
    <string name="taquin">Taquin</string>
    <string name="blue">Blue</string>
    <string name="red">Red</string>
    <string name="purple">Purple</string>
    <string name="th_me">Theme :</string>
    <string name="langue">Language :</string>
    <string name="pixel_party">Pixel Party</string>
    <string name="selected_character_none">Select your character</string>
    <string name="resume">Resume</string>
    <string name="restart">Restart</string>
    <string name="quit">Quit</string>
    <string name="pause">Pause</string>
    <string name="time">Time</string>
    <string name="dice">Dice</string>
    <string name="new_game">New Game</string>
    <string name="mini_games">Mini Games</string>
    <string name="play">Play</string>
    <string name="back">Back</string>
    <string name="about">About</string>
    <string name="Mole">Mole</string>


    <!-- Ajout du tableau de langues -->
    <string-array name="language_options">
        <item>Français</item>
        <item>Anglais</item>
    </string-array>


</resources>
