<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RunGame_MA">


    <FrameLayout
        android:id="@+id/gameFrame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="39dp"
        tools:layout_editor_absoluteY="100dp">

        <Button
            android:id="@+id/resume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/press2start"
            android:text="@string/resume"
            android:visibility="gone" />

        <Button
            android:id="@+id/restart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:fontFamily="@font/press2start"
            android:text="@string/restart"
            android:visibility="gone" />

        <Button
            android:id="@+id/quit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="120dp"
            android:fontFamily="@font/press2start"
            android:text="@string/quit"
            android:visibility="gone" />

        <TextView
            android:id="@+id/gamePause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/pause"
            android:textColor="@color/white"
            android:fontFamily="@font/press2start"
            android:textSize="60sp"
            android:visibility="gone"
            android:layout_marginBottom="60dp"/>

        <ImageView
            android:id="@+id/settings"
            android:layout_width="47dp"
            android:layout_height="47dp"
            app:srcCompat="@drawable/settings"
            android:layout_marginTop="20dp"/>



    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>